Girilen inputların tabloya eklenme işlemi tamamlandı.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
   <body>
     <div class="container">
       <h1>Rehber Uygulaması</h1>
-      <div class="bilgi bilgi--success">Başarılı</div>
-      <div class="bilgi bilgi--error">Hata Çıktı</div>
 
       <form id="form-rehber">
         <div>
@@ -58,43 +56,8 @@
             <th>Işlem</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>Sena</td>
-            <td>Kudu</td>
-            <td>mail@mail.com</td>
-            <td>
-              <button class="btn btn--edit"><i class="far fa-edit"></i></button>
-              <button class="btn btn--delete">
-                <i class="far fa-trash-alt"></i>
-              </button>
-            </td>
-          </tr>
-
-          <tr>
-            <td>Sena</td>
-            <td>Kudu</td>
-            <td>mail@mail.com</td>
-            <td>
-              <button class="btn btn--edit"><i class="far fa-edit"></i></button>
-              <button class="btn btn--delete">
-                <i class="far fa-trash-alt"></i>
-              </button>
-            </td>
-          </tr>
-
-
-          <tr>
-            <td>Sena</td>
-            <td>Kudu</td>
-            <td>mail@mail.com</td>
-            <td>
-              <button class="btn btn--edit"><i class="far fa-edit"></i></button>
-              <button class="btn btn--delete">
-                <i class="far fa-trash-alt"></i>
-              </button>
-            </td>
-          </tr>
+        <tbody class="kisi-listesi">
+    
           
         </tbody>
       </table>
