--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <body>
     <div class="container">
       <h1>Rehber Uygulaması</h1>
-
       <form id="form-rehber">
         <div>
           <label for="ad">Adı</label>
@@ -57,8 +56,18 @@
           </tr>
         </thead>
         <tbody class="kisi-listesi">
-    
-          
+          <tr>
+            <td>Sena</td>
+            <td>Kudu</td>
+            <td>mail@mail.com</td>
+            <td>
+              <button class="btn btn--edit"><i class="far fa-edit"></i></button>
+              <button class="btn btn--delete">
+                <i class="far fa-trash-alt"></i>
+              </button>
+            </td>
+          </tr>
+
         </tbody>
       </table>
     </div>
