--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <input
             type="submit"
             value="Kaydet"
-            class="button-primary u-full-width"
+            class="button-primary u-full-width kaydetGuncelle"
           />
         </div>
       </form>
